hotfix/fix-version-issue
Change the syntax that match the java version.